# Pipeline-de-Analisis-de-Ventas-Retail

./: .env.example  .gitignore  README.md  check_data.py  db_config.py  main.py  nuevos_meses.py  pyproject.toml  requirements.txt  views.sql
dashboard/: dashboard.pbix
sql/: analisis.sql
